@@ -1,16 +1,0 @@
-[tool.black]
-line-length = 80
-target-version = ['py36', 'py37', 'py38']
-include = '\.pyi?$'
-exclude = '''
-(
-  /(
-      \.git
-    | \.tox
-    | env
-    | build
-    | dist
-    | bootstrap.py
-  )/
-)
-'''
